<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.3"
        android:contentDescription="@string/alarm_str"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_alarm_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="fill"
        android:orientation="horizontal">

        <Button
            android:id="@+id/load_main_activity_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showAlarms_str"
            tools:ignore="NestedWeights"
            tools:text="@string/showAlarms_str" />

        <Button
            android:id="@+id/dismiss_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dismiss_str"
            tools:text="@string/dismiss_str" />

    </LinearLayout>

</LinearLayout>