<?xml version="1.0" encoding="utf-8"?>
<!--

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?attr/listPreferredItemHeight"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:foreground="?selectableItemBackground"
    android:clickable="true">

    <TextView
        android:id="@+id/ar_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="start|bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        tools:text="7:00"/>

    <TextView
        android:id="@+id/ar_am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignBaseline="@+id/ar_time"
        android:layout_toRightOf="@+id/ar_time"
        android:layout_toEndOf="@+id/ar_time"
        tools:text="AM"/>


    <ImageView
        android:id="@+id/ar_repeat_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_repeat_black_24dp"
        android:layout_toRightOf="@+id/ar_am_pm"
        android:layout_toEndOf="@+id/ar_am_pm"
        android:layout_alignTop="@+id/ar_time"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/ar_repeat_icon"
        android:layout_toEndOf="@+id/ar_repeat_icon"
        android:layout_toLeftOf="@+id/ar_icon"
        android:layout_toStartOf="@+id/ar_icon"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/ar_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Get Up"/>

        <TextView
            android:id="@+id/ar_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="M Tu W Th F Sa Su"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ar_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:tint="@color/accent"
        android:src="@drawable/ic_alarm_white_24dp"/>

</RelativeLayout>
-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/ar_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start|bottom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="7:00" />

    <TextView
        android:id="@+id/ar_am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ar_time"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ar_time"
        app:layout_constraintTop_toTopOf="@+id/ar_time"
        tools:text="@string/am_str" />


    <ImageView
        android:id="@+id/ar_repeat_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ar_time"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/repeatAlarm_str"
        android:src="@drawable/ic_repeat_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ar_am_pm"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toEndOf="@+id/ar_repeat_icon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ar_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/alarmTitle_str" />

        <TextView
            android:id="@+id/ar_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ar_label"
            tools:text="@string/allDaysOfWeek_str" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/ar_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/alarmClockIcon"
        android:padding="12dp"
        android:src="@drawable/ic_alarm_white_24dp"
        android:tint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>